# strixhalo-npu-setup

./: .gitignore  LICENSE  README.md  pyproject.toml
experiments/: __init__.py  build_xclbin.py  experiment_10_phase5.py  experiment_1_passthrough.py  experiment_2_vec_add.py  experiment_3_gemm_single.py  experiment_4_gemm_block.py  experiment_5_gemm_multi.py  experiment_6_bfp16_accuracy.py  experiment_7_gemm_optimized.py  experiment_8_gemm_multitile.py  experiment_9_handwritten_kernel.py  experiment_9a_whole_array_custom_kernel.py  instr_compiler.py  kernel_gemm_bfp16_8acc.cc  kernel_gemm_bfp16_optimized.cc  kernel_gemm_bfp16_packed.cc  kernel_gemm_bfp16_swp.cc  kernel_gemm_bfp16_unroll2x.cc  kernel_gemm_vliw.cc  npu_compiler.py  pack_bfp16.py  runner.py  xaie_gemm_generator.py
experiments/kernel_defs/: __init__.py  gemm_8x8x8.py  gemm_block.py  passthrough.py  vec_add.py
experiments/results/: README.md  chess_gemm_reference.json  gemm_16tile_82gflops.json  gemm_2tile_peano_2026-06-26.json  gemm_4tile_peano_2026-06-26.json  gemm_8tile_ktiled_2026-06-26.json  gemm_8tile_peano_2026-06-26.json  gemm_peano_2026-06-26.json  (+7 more)
experiments_lib/: __init__.py  datatypes.py  dma_planner.py  layouts.py  report.py  tile_shapes.py
npu_control_plane/: __init__.py  benchmark.py  cli.py  discovery.py  metadata.py  probe.py  registry.py  toolchains.py
saved_xclbins/: fresh.xclbin  phase5_bf16_512x8192x512.xclbin
tests/: test_benchmark_cli.py  test_discovery_toolchains.py  test_experiment_helpers.py  test_final_review_fixes.py  test_gemm_block.py  test_metadata.py  test_registry.py
(+13 files in other folders)
