[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "strixhalo-npu-control-plane"
version = "0.1.0"
description = "Clean-room control plane MVP for Strix Halo NPU experiments"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Strix Halo NPU Contributors" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
npu-ctrl = "npu_control_plane.cli:main"
exp1-passthrough = "experiments.experiment_1_passthrough:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]